docs: add model examples and fix minor bugs related to env variables
